@@ -57,12 +57,23 @@ class TemplateJavaCompile extends SourceTask {
 	}
 }
 
+def String fxPlatform() {
+	def currentOS = org.gradle.internal.os.OperatingSystem.current()
+	if (currentOS.isWindows()) {
+		return 'win'
+	} else if (currentOS.isLinux()) {
+		return 'linux'
+	} else if (currentOS.isMacOsX()) {
+		return 'mac'
+	}
+}
+
 subprojects {
 	apply plugin: 'java'
 	apply plugin: 'maven'
 	apply plugin: "com.diffplug.gradle.spotless"
 	
-	sourceCompatibility = 1.8
+	sourceCompatibility = (org.gradle.api.JavaVersion.current() == org.gradle.api.JavaVersion.VERSION_1_8 ? 8 : 9)
 	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 	[compileJava, compileTestJava]*.options*.deprecation = true
 	[compileJava, compileTestJava]*.options*.compilerArgs = ["-Xlint:unchecked"]
@@ -70,8 +81,20 @@ subprojects {
 	group = "name.rayrobdod"
 	version = 'SNAPSHOT'
 	javadoc.options.overview = new File(sourceSets.main.java.srcDirs[0], 'overview.html')
-	javadoc.options.links("https://docs.oracle.com/javase/8/docs/api/")
-	javadoc.options.links("https://docs.oracle.com/javase/8/javafx/api/")
+	javadoc.options.addBooleanOption('Xdoclint:-syntax', true)
+	if (JavaVersion.current().isJava8()) {
+		javadoc.options.links("https://docs.oracle.com/javase/8/docs/api/")
+		javadoc.options.links("https://docs.oracle.com/javase/8/javafx/api/")
+	} else if (JavaVersion.current().isJava9()) {
+		javadoc.options.links("https://docs.oracle.com/javase/9/docs/api/")
+	} else if (JavaVersion.current().isJava10()) {
+		javadoc.options.links("https://docs.oracle.com/javase/10/docs/api/")
+	} else if (JavaVersion.current().isJava11()) {
+		javadoc.options.links("https://docs.oracle.com/en/java/javase/11/docs/api/")
+		javadoc.options.links("https://openjfx.io/javadoc/11/")
+	} else {
+		// https://download.java.net/java/early_access/jdk12/docs/api/
+	}
 	
 	repositories {
 		mavenCentral()
@@ -82,7 +105,47 @@ subprojects {
 		testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.0")
 		testCompile "org.testfx:testfx-junit5:4.0.13-alpha"
 	}
+	
+	if (! project.hasProperty("noExternalJavafx")) {
+		dependencies {
+			compileOnly "org.openjfx:javafx-base:11:${fxPlatform()}"
+			compileOnly "org.openjfx:javafx-graphics:11:${fxPlatform()}"
+			compileOnly "org.openjfx:javafx-controls:11:${fxPlatform()}"
+			compileOnly "org.openjfx:javafx-swing:11:${fxPlatform()}"
+			compileOnly "org.openjfx:javafx-media:11:${fxPlatform()}"
+			
+			testCompile "org.openjfx:javafx-base:11:${fxPlatform()}"
+			testCompile "org.openjfx:javafx-graphics:11:${fxPlatform()}"
+			testCompile "org.openjfx:javafx-controls:11:${fxPlatform()}"
+			testCompile "org.openjfx:javafx-swing:11:${fxPlatform()}"
+			testCompile "org.openjfx:javafx-media:11:${fxPlatform()}"
+		}
+	}
 
+	if (JavaVersion.current().isJava9Compatible()) {
+		sourceSets {
+			main {
+				java {
+					srcDirs 'src/main/java', 'src/main/java-9+'
+				}
+			}
+		}
+		
+		compileJava {
+			doFirst {
+				options.compilerArgs = [
+				'--module-path', classpath.asPath,
+				]
+				classpath = files()
+			}
+		}
+		javadoc {
+			doFirst {
+				options.addStringOption('-module-path', classpath.asPath)
+			}
+		}
+	}
+	
 	spotless {
 		java {
 			target project.fileTree(project.rootDir) {
@@ -91,7 +154,7 @@ subprojects {
 			}
 			importOrder 'java', 'javax', 'javafx', 'org.junit', 'org.testfx', '', 'name.rayrobdod'
 			removeUnusedImports()
-			licenseHeaderFile '../spotless-license-java'
+			licenseHeaderFile '../spotless-license-java', 'package|module'
 			endWithNewline()
 			replaceRegex 'one blank line after package line', '(package .+;)\n+import', '$1\n\nimport'
 			replaceRegex 'one blank line after import lists', '(import .+;\n\n)\n+', '$1'
@@ -232,6 +295,15 @@ project(":samples") {
 	sourceSets.main.java.srcDir "${buildDir}/generated/java/"
 	
 	
+	if (! project.hasProperty("noExternalJavafx")) {
+		dependencies {
+			compile "org.openjfx:javafx-base:11:${fxPlatform()}"
+			compile "org.openjfx:javafx-graphics:11:${fxPlatform()}"
+			compile "org.openjfx:javafx-controls:11:${fxPlatform()}"
+			compile "org.openjfx:javafx-swing:11:${fxPlatform()}"
+			compile "org.openjfx:javafx-media:11:${fxPlatform()}"
+		}
+	}
 	
 	jar.manifest.attributes (
 		  'Main-Class': project.mainClassName
@@ -255,6 +327,17 @@ project(":samples") {
 		standardInput = System.in
 		ignoreExitValue = true
 	}
+	if (JavaVersion.current().isJava9Compatible()) {
+		run {
+			doFirst {
+				jvmArgs = [
+					'--module-path', classpath.asPath,
+					'--module', "name.rayrobdod.fightStage.demo/${project.mainClassName}"
+				]
+				classpath = files()
+			}
+		}
+	}
 	
 	task fatjar(dependsOn: classes, type: Jar) {
 		// delay execution of expandZips unitil after the classpath is created
@@ -270,4 +353,51 @@ project(":samples") {
 		)
 	}
 	assemble.dependsOn(fatjar)
+
+	if (JavaVersion.current().isJava9Compatible()) {
+		task extractLicenseToDir(type: Copy) {
+			from "$rootDir/LICENSE.txt"
+			into "$buildDir/tmp/mod/legal"
+		}
+		task extractSoundToDir(type: Copy) {
+			from "$projectDir/src/main/resources/name/rayrobdod/fightStage/sounds/swing.wav"
+			into "$buildDir/tmp/mod/libs"
+		}
+		task mod(type: Exec) {
+			dependsOn 'jar'
+			dependsOn 'extractLicenseToDir'
+			dependsOn 'extractSoundToDir'
+			dependsOn 'cleanMod'
+			workingDir buildDir
+			outputs.file "${buildDir}/libs/samples.jmod"
+			
+			commandLine "${System.properties.'java.home'}/bin/jmod",
+					'create',
+					'--class-path', "${jar.archivePath}",
+					'--legal-notices', "$buildDir/tmp/mod/legal",
+					'--libs', "$buildDir/tmp/mod/libs",
+					'distributions/fightstage-samples.jmod'
+		}
+		
+		
+		task link(type: Exec) {
+			dependsOn 'mod'
+			dependsOn 'cleanLink'
+			workingDir buildDir
+			outputs.file "${buildDir}/distributions/jlink"
+			
+			commandLine "${System.properties.'java.home'}/bin/jlink",
+					//'--module-path', "${project.configurations.runtime.asPath}${File.pathSeparatorChar}${jar.archivePath}${File.pathSeparatorChar}${System.properties.'java.home'}/jmods",
+					'--module-path', "${project.configurations.runtime.asPath}${File.pathSeparatorChar}distributions/fightstage-samples.jmod${File.pathSeparatorChar}${System.properties.'java.home'}/jmods",
+					'--add-modules', 'name.rayrobdod.fightStage.samples',
+					'--launcher', "samples=name.rayrobdod.fightStage.demo/${project.mainClassName}",
+					'--output', 'distributions/jlink',
+					//'--bind-services',
+					'--strip-debug',
+					'--compress', '0',
+					'--no-header-files',
+					'--no-man-pages'
+		}
+		assemble.dependsOn(link)
+	}
 }
